[workspace]
members = ["macros"]

[package]
name = "embedded-error-chain"
version = "0.1.0"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"

[dependencies]
macros = { path = "macros", package = "embedded-error-chain-macros", version = "0.1" }
static_assertions = { version = "1.1.0", optional = true }

[features]
default = ["panic-on-overflow", "static_assertions"]

panic-on-overflow = []
nightly = []
