[workspace]
members = ["macros"]

[package]
name = "embedded-error-chain"
version = "0.1.1"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Easy error handling in no-alloc and no-std environments"
repository = "https://github.com/N3xed/embedded-error-chain"
documentation = "https://docs.rs/embedded-error-chain"
readme = "README.md"
categories = ["embedded", "no-std", "rust-patterns"]
keywords = ["embedded", "error", "no-std", "no-alloc"]

[dependencies]
embedded-error-chain-macros = { path = "macros", package = "embedded-error-chain-macros", version = "0.1" }

[features]
default = ["panic-on-overflow"]

panic-on-overflow = []
nightly = []
std = []