[package]
name = "embedded-error-chain-macros"
version = "1.0.0"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros of the `embedded-error-chain` crate"
repository = "https://github.com/N3xed/embedded-error-chain"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }
proc-macro-error = "1.0"